# vidtools

./: CLAUDE.md  README.md  batch_convert.py  cli.py  main.py  merge.sh  presets.py  pyproject.toml  requirements.txt  setup.py  test_sample.py  tui.py  utils.py
presets/: ffmpeg_presets.json
vidtools/: __init__.py  _version.py  cli.py  main.py  presets.py
